<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/greyDark"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="25dp"
            android:text="@string/text_val"
            android:textSize="25sp"
            android:textColor="@color/white"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:padding="10dp"
            android:background="@color/greyDeep"/>
        <EditText
            android:id="@+id/edtVal"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:hint="@string/enter_val"
            android:textSize="25sp"
            android:singleLine="true"
            android:textColorHint="@color/greyDeep"
            android:background="@null"/>
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/bg_button"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/title_reg_val"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:clickable="true"
        android:onClick="doSubmit"/>

</LinearLayout>
